# xeus-r

./: CMakeLists.txt  pre.js
cmake/: FindR.cmake  WasmBuildLocalOptions.cmake
share/jupyter/kernels/xr/resources/: call.R  configure.R  setup.R
src/: main_emscripten_kernel.cpp  rtools.hpp  xinterpreter.cpp  xinterpreter_wasm.cpp
